Fixing restart bugs